2000-11-27  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 08.

	* lisp/message.el (message-send-mail-with-smtp): Leave the error
	handling in `smtp-send-buffer's own care.

2000-11-26  Tatsuya Ichikawa  <ichikawa@eitc.epson.com>

	* lisp/message.el: Undo changes.

2000-11-26  Tatsuya Ichikawa  <ichikawa@eitc.epson.com>

	* lisp/message.el (message-send-mail-with-smtp): Change error
	handling 'cause delete-process will return nil on most platform,
	then message-send-mail-with-smtp seems fail to send message even
	sending message success.

2000-11-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 07.

	* lisp/gnus.el: Add autoloads for x-face-e21.

	* lisp/gnus-sum.el (gnus-summary-search-article-position-point):
	Search for `x-face-image' as well as `x-face-mule-bitmap-image'.

	* lisp/gnus-art.el (gnus-article-x-face-command): Default to
	`x-face-decode-message-header' when Emacs 21 is running and
	x-face-e21 is installed.

2000-11-21  KANEMATSU Daiji <kanematu@sra.co.jp>

	* lisp/gnus-art.el (gnus-treat-display-xface): Default to `head'
	when Emacs 21 is running and uncompface command is available.

2000-11-21  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-send-mail-with-smtp): Use
	`smtp-send-buffer' if it exists instead of `smtp-via-smtp'.

2000-11-16  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* texi/gnus-ja.texi (Drafts): Fix typo.

2000-11-04  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* lisp/gnus-topic.el (gnus-group-topic-map): Define "T" prefix
	command in `gnus-topic-mode-map' instead of `gnus-group-mode-map'.

2000-10-25  Katsuhiro Hermit Endo  <hermit@tomato.saino.ne.jp>

	* lisp/gnus-topic.el (gnus-topic-rename): Use current topic as
	initial value for read-string.

2000-11-05  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* lisp/smiley.el (smiley-deformed-regexp-alist): Modify regexp for
	the winking face.
